--- a/frontend/templates/frontend/substrate.html
+++ b/frontend/templates/frontend/substrate.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
-    <title>Furnace List</title>
+    <title>Substrate List</title>
 </head>
 
 <body>
     <section class="section">
         <div class="container">
-            <div id="furnace_list"></div>
+            <div id="substrate_list"></div>
         </div>
     </section>
 </body>
