--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -9,8 +9,47 @@
 
 <body>
     <section class="section">
-        <div class="container">
-            <div id="sample_list"><!-- React --></div>
+        <div class="hero-head">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a class="navbar-item">
+                            <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
+                        </a>
+                        <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <div id="navbarMenuHeroA" class="navbar-menu">
+                        <div class="navbar-end">
+                            <a class="navbar-item is-active">
+                                Sample
+                            </a>
+                            <a class="navbar-item" href="/target/">
+                                Target
+                            </a>
+                            <a class="navbar-item" href="/substrate/">
+                                Substrate
+                            </a>
+                            <span class="navbar-item">
+                                <a class="button is-primary is-inverted">
+                                    <span class="icon">
+                                        <i class="fab fa-github"></i>
+                                    </span>
+                                    <span>Download</span>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="hero-body">
+            <div class="container">
+                <div id="sample_list"><!-- React --></div>
+            </div>
         </div>
     </section>
 </body>
