--- a/frontend/templates/frontend/sample.html
+++ b/frontend/templates/frontend/sample.html
@@ -45,7 +45,7 @@
                 </div>
             </nav>
         </div>
-        <div id="sample_detail" data-id="1"></div>
+        <div id="sample_detail" data-id="{{ sample_id }}"></div>
     </section>
 </body>
 {% load static %}
